--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div>
 
-        <a href="#" class="nav_logo">Narasimhan</a>
+        <a href="#" class="nav_logo">Portfolio</a>
          
       </div>
 
